tests/ui/rfcs/rfc-2294-if-let-guard/parens.stderr
error: expected expression, found `let` statement
  --> $DIR/parens.rs:7:16
   |
LL |         () if (let 0 = 1) => {}
   |                ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if` and `while` expressions
note: `let`s wrapped in parentheses are not supported in a context with let chains
  --> $DIR/parens.rs:7:16
   |
LL |         () if (let 0 = 1) => {}
   |                ^^^^^^^^^

error: expected expression, found `let` statement
  --> $DIR/parens.rs:9:18
   |
LL |         () if (((let 0 = 1))) => {}
   |                  ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if` and `while` expressions
note: `let`s wrapped in parentheses are not supported in a context with let chains
  --> $DIR/parens.rs:9:18
   |
LL |         () if (((let 0 = 1))) => {}
   |                  ^^^^^^^^^

error: expected expression, found `let` statement
  --> $DIR/parens.rs:17:16
   |
LL |         () if (let 0 = 1) => {}
   |                ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if` and `while` expressions
note: `let`s wrapped in parentheses are not supported in a context with let chains
  --> $DIR/parens.rs:17:16
   |
LL |         () if (let 0 = 1) => {}
   |                ^^^^^^^^^

error: expected expression, found `let` statement
  --> $DIR/parens.rs:19:18
   |
LL |         () if (((let 0 = 1))) => {}
   |                  ^^^^^^^^^
   |
   = note: only supported directly in conditions of `if` and `while` expressions
note: `let`s wrapped in parentheses are not supported in a context with let chains
  --> $DIR/parens.rs:19:18
   |
LL |         () if (((let 0 = 1))) => {}
   |                  ^^^^^^^^^

error: aborting due to 4 previous errors

